# AMS

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
ams/: __init__.py  __main__.py
ams/api/: __init__.py  app.py  middleware.py  models.py
ams/core/: __init__.py  config.py  errors.py
ams/core/adapters/: __init__.py  autogen_adapter.py  base.py  crewai_adapter.py
ams/core/communication/: __init__.py  chat_context.py  hub.py
ams/core/registry/: __init__.py  base.py  capability_registry.py  memory.py  models.py
ams/core/supervisor/: __init__.py  base.py  manager.py
ams/tests/: test_config.py  test_dataclasses.py
docs/: adapters.md  api.md  capabilities.md  extending_ams.md  supervisor.md
examples/: README.md  create_tasks.py  creative_writing_collaboration.py  extend_capability_example.py  mixed_framework_collaboration.py  multi_agent_collaboration.py  register_agents.py
output/: generated_story.txt  generated_story_20250330-121723.txt  generated_story_20250330-124706.txt  generated_story_20250330-134238.txt
